# rsomics-inner-distance

./: Cargo.toml  README.md
benches/: bench.rs  inner_distance.rs
src/: cigar.rs  cli.rs  compute.rs  gene_model.rs  lib.rs  output.rs
tests/: compat.rs  json_envelope.rs  make_golden.py  make_large_fixture.py  smoke.rs
tests/golden/: genes.bed12  pairs.bam  pairs.bam.bai
tests/large_fixture/: genes_large.bed12  pairs_large.bam  pairs_large.bam.bai
