[package]
name = "rsomics-inner-distance"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-inner-distance"
authors = ["Zane Leong <efd@live.com>"]
description = "mRNA-aware inner-distance distribution for paired-end RNA-seq — Rust port of RSeQC inner_distance.py"

[[bin]]
name = "rsomics-inner-distance"
path = "src/main.rs"


[lib]
name = "rsomics_inner_distance"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
coitrees = "0.4"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "inner_distance"
harness = false
